--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,11 @@
                         </div>
                         <div id="database-pagination" style="display: none; margin-top: 8px; text-align: center; font-size: 12px;">
                             <button id="pagination-prev" style="padding: 6px 16px; margin: 0 4px; border: 1px solid #ddd; border-radius: 4px; background: #f9f9f9; cursor: pointer; transition: all 0.2s;">← Prev</button>
-                            <span id="pagination-info" style="margin: 0 12px; color: #666; font-weight: 500;"></span>
+                            <span id="pagination-info" style="margin: 0 8px; color: #666; font-weight: 500;"></span>
+                            <span style="margin: 0 4px; color: #666;">Go to page:</span>
+                            <input type="number" id="pagination-input" min="1" value="1" style="width: 50px; padding: 4px; margin: 0 4px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-size: 12px;">
+                            <span id="pagination-total" style="margin: 0 4px; color: #666;"></span>
+                            <button id="pagination-go" style="padding: 6px 12px; margin: 0 4px; border: 1px solid #ddd; border-radius: 4px; background: #f9f9f9; cursor: pointer; transition: all 0.2s;">Go</button>
                             <button id="pagination-next" style="padding: 6px 16px; margin: 0 4px; border: 1px solid #ddd; border-radius: 4px; background: #f9f9f9; cursor: pointer; transition: all 0.2s;">Next →</button>
                         </div>
                         <div class="dialog-buttons">
