--- a/public/index.html
+++ b/public/index.html
@@ -198,6 +198,6 @@
     
     <!-- Main Application -->
     <script src="graph.js"></script>
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
