--- a/public/index.html
+++ b/public/index.html
@@ -197,7 +197,7 @@
     <script src="ui-functions.js"></script>
     
     <!-- Main Application -->
-    <script src="graph.js"></script>
+    <script type="module" src="graph.js"></script>
     <script type="module" src="app.js"></script>
 </body>
 </html>
