--- a/public/index.html
+++ b/public/index.html
@@ -117,10 +117,11 @@
                             border-radius: 4px;
                             max-height: 300px;
                             overflow-y: auto;
-                            z-index: 1000;
+                            z-index: 10001;
                             margin-top: 4px;
                             min-width: 200px;
                             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+                            pointer-events: auto;
                         "
                     ></div>
                 </div>
