--- a/public/index.html
+++ b/public/index.html
@@ -448,6 +448,39 @@
                                 <p style="text-align: center; color: #666; font-size: 12px; margin: 20px 0;">Start typing to search for nodes...</p>
                             </div>
                             <div
+                                id="dialog-pagination"
+                                style="
+                                    display: none;
+                                    justify-content: space-between;
+                                    align-items: center;
+                                    margin-bottom: 12px;
+                                    padding: 8px;
+                                    background: #f5f5f5;
+                                    border-radius: 4px;
+                                "
+                            >
+                                <button
+                                    id="dialog-pagination-prev"
+                                    class="tool-btn"
+                                    style="padding: 6px 12px; font-size: 12px;"
+                                    disabled
+                                >
+                                    ← Previous
+                                </button>
+                                <span
+                                    id="dialog-pagination-info"
+                                    style="font-size: 12px; color: #666; font-weight: 500;"
+                                ></span>
+                                <button
+                                    id="dialog-pagination-next"
+                                    class="tool-btn"
+                                    style="padding: 6px 12px; font-size: 12px;"
+                                    disabled
+                                >
+                                    Next →
+                                </button>
+                            </div>
+                            <div
                                 id="selected-node-info"
                                 style="
                                     display: none;
