--- a/public/index.html
+++ b/public/index.html
@@ -451,34 +451,33 @@
                                 id="dialog-pagination"
                                 style="
                                     display: none;
-                                    justify-content: space-between;
+                                    justify-content: center;
                                     align-items: center;
+                                    gap: 8px;
                                     margin-bottom: 12px;
                                     padding: 8px;
                                     background: #f5f5f5;
                                     border-radius: 4px;
                                 "
                             >
-                                <button
-                                    id="dialog-pagination-prev"
-                                    class="tool-btn"
-                                    style="padding: 6px 12px; font-size: 12px;"
-                                    disabled
-                                >
-                                    ← Previous
-                                </button>
                                 <span
                                     id="dialog-pagination-info"
                                     style="font-size: 12px; color: #666; font-weight: 500;"
                                 ></span>
-                                <button
-                                    id="dialog-pagination-next"
-                                    class="tool-btn"
-                                    style="padding: 6px 12px; font-size: 12px;"
-                                    disabled
-                                >
-                                    Next →
-                                </button>
+                                <input
+                                    type="number"
+                                    id="dialog-pagination-input"
+                                    min="1"
+                                    style="
+                                        width: 60px;
+                                        padding: 4px 8px;
+                                        border: 1px solid #ddd;
+                                        border-radius: 4px;
+                                        font-size: 12px;
+                                        text-align: center;
+                                    "
+                                    placeholder="Page"
+                                />
                             </div>
                             <div
                                 id="selected-node-info"
