--- a/public/index.html
+++ b/public/index.html
@@ -596,6 +596,184 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="sidebar-section">
+                        <h4>Layer Management</h4>
+                        <div style="margin-bottom: 8px;">
+                            <p id="layer-summary" style="font-size: 12px; color: #666; margin-bottom: 8px;">
+                                No layers defined
+                            </p>
+                            <button
+                                id="manage-layers-btn"
+                                class="tool-btn"
+                                style="width: 100%; padding: 8px; font-size: 12px;"
+                                title="Manage Layers"
+                            >
+                                <span class="icon">📋</span>
+                                Manage Layers
+                            </button>
+                        </div>
+                        <div style="margin-top: 8px;">
+                            <div style="margin-bottom: 8px;">
+                                <label style="font-size: 11px; display: block; margin-bottom: 4px;">
+                                    Filter Mode:
+                                </label>
+                                <label style="font-size: 11px; display: flex; align-items: center; cursor: pointer; margin-bottom: 4px;">
+                                    <input
+                                        type="radio"
+                                        name="layer-filter-mode"
+                                        value="include"
+                                        checked
+                                        style="margin-right: 6px"
+                                    />
+                                    Include
+                                </label>
+                                <label style="font-size: 11px; display: flex; align-items: center; cursor: pointer;">
+                                    <input
+                                        type="radio"
+                                        name="layer-filter-mode"
+                                        value="exclude"
+                                        style="margin-right: 6px"
+                                    />
+                                    Exclude
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Layer Management Dialog -->
+        <div id="layer-management-dialog" class="dialog hidden">
+            <div class="dialog-content" style="max-width: 600px;">
+                <h3>Manage Layers</h3>
+                <div style="margin-bottom: 12px;">
+                    <input
+                        type="text"
+                        id="layer-search-input"
+                        placeholder="Search layers..."
+                        style="
+                            width: 100%;
+                            padding: 8px;
+                            border: 1px solid #ddd;
+                            border-radius: 4px;
+                            font-size: 13px;
+                        "
+                    />
+                </div>
+                <div style="margin-bottom: 12px;">
+                    <div style="display: flex; gap: 8px; margin-bottom: 8px;">
+                        <label style="font-size: 12px; display: flex; align-items: center; cursor: pointer;">
+                            <input
+                                type="radio"
+                                name="dialog-layer-filter-mode"
+                                value="include"
+                                checked
+                                style="margin-right: 6px"
+                            />
+                            Include
+                        </label>
+                        <label style="font-size: 12px; display: flex; align-items: center; cursor: pointer;">
+                            <input
+                                type="radio"
+                                name="dialog-layer-filter-mode"
+                                value="exclude"
+                                style="margin-right: 6px"
+                            />
+                            Exclude
+                        </label>
+                    </div>
+                    <div style="font-size: 12px; color: #666; margin-bottom: 8px;">
+                        Total: <span id="total-layers-count">0</span> | 
+                        Selected: <span id="selected-layers-count">0</span>
+                    </div>
+                </div>
+                <div
+                    id="layer-grid"
+                    style="
+                        max-height: 300px;
+                        overflow-y: auto;
+                        border: 1px solid #ddd;
+                        border-radius: 4px;
+                        padding: 8px;
+                        margin-bottom: 12px;
+                        background: #f9f9f9;
+                    "
+                >
+                    <p style="text-align: center; color: #666; font-size: 12px; margin: 20px 0;">
+                        No layers defined
+                    </p>
+                </div>
+                <div style="display: flex; gap: 8px; margin-bottom: 8px; flex-wrap: wrap;">
+                    <button id="select-all-layers-btn" class="tool-btn" style="padding: 6px 12px; font-size: 12px;">
+                        Select All
+                    </button>
+                    <button id="select-none-layers-btn" class="tool-btn" style="padding: 6px 12px; font-size: 12px;">
+                        Select None
+                    </button>
+                    <button id="invert-selection-btn" class="tool-btn" style="padding: 6px 12px; font-size: 12px;">
+                        Invert
+                    </button>
+                    <button id="save-layer-view-btn" class="tool-btn" style="padding: 6px 12px; font-size: 12px;">
+                        Save View
+                    </button>
+                </div>
+                <div class="dialog-buttons">
+                    <button id="apply-layers-btn">Apply</button>
+                    <button id="reset-layers-btn">Reset</button>
+                    <button id="cancel-layers-btn">Cancel</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Layer Rename Dialog -->
+        <div id="layer-rename-dialog" class="dialog hidden">
+            <div class="dialog-content" style="max-width: 400px;">
+                <h3>Rename Layer</h3>
+                <div style="margin-bottom: 12px;">
+                    <label style="font-size: 12px; display: block; margin-bottom: 4px;">
+                        Current Name:
+                    </label>
+                    <input
+                        type="text"
+                        id="rename-old-layer"
+                        readonly
+                        style="
+                            width: 100%;
+                            padding: 8px;
+                            border: 1px solid #ddd;
+                            border-radius: 4px;
+                            font-size: 13px;
+                            background: #f5f5f5;
+                        "
+                    />
+                </div>
+                <div style="margin-bottom: 12px;">
+                    <label style="font-size: 12px; display: block; margin-bottom: 4px;">
+                        New Name:
+                    </label>
+                    <input
+                        type="text"
+                        id="rename-new-layer"
+                        placeholder="Enter new layer name"
+                        style="
+                            width: 100%;
+                            padding: 8px;
+                            border: 1px solid #ddd;
+                            border-radius: 4px;
+                            font-size: 13px;
+                        "
+                    />
+                </div>
+                <div id="rename-usage-info" style="font-size: 11px; color: #666; margin-bottom: 8px;">
+                    This layer is used by 0 node(s)
+                </div>
+                <div id="rename-error" style="display: none; color: #d32f2f; font-size: 12px; margin-bottom: 8px; padding: 8px; background: #ffebee; border-radius: 4px;">
+                </div>
+                <div class="dialog-buttons">
+                    <button id="rename-apply-btn">Rename</button>
+                    <button id="rename-cancel-btn">Cancel</button>
                 </div>
             </div>
         </div>
