--- a/public/index.html
+++ b/public/index.html
@@ -705,6 +705,59 @@
                         No layers defined
                     </p>
                 </div>
+                <div
+                    id="layer-pagination"
+                    style="
+                        display: none;
+                        justify-content: center;
+                        align-items: center;
+                        gap: 8px;
+                        margin-bottom: 12px;
+                        flex-wrap: wrap;
+                    "
+                >
+                    <button
+                        id="layer-pagination-prev"
+                        class="tool-btn"
+                        style="padding: 6px 12px; font-size: 12px;"
+                        disabled
+                    >
+                        ← Prev
+                    </button>
+                    <span
+                        id="layer-pagination-info"
+                        style="font-size: 12px; color: #666; font-weight: 500;"
+                    ></span>
+                    <span style="font-size: 12px; color: #666;">Go to page:</span>
+                    <input
+                        type="number"
+                        id="layer-pagination-input"
+                        min="1"
+                        style="
+                            width: 60px;
+                            padding: 4px 8px;
+                            border: 1px solid #ddd;
+                            border-radius: 4px;
+                            font-size: 12px;
+                            text-align: center;
+                        "
+                        placeholder="Page"
+                    />
+                    <button
+                        id="layer-pagination-go"
+                        class="tool-btn"
+                        style="padding: 6px 12px; font-size: 12px;"
+                    >
+                        Go
+                    </button>
+                    <button
+                        id="layer-pagination-next"
+                        class="tool-btn"
+                        style="padding: 6px 12px; font-size: 12px;"
+                    >
+                        Next →
+                    </button>
+                </div>
                 <div style="display: flex; gap: 8px; margin-bottom: 8px; flex-wrap: wrap;">
                     <button id="select-all-layers-btn" class="tool-btn" style="padding: 6px 12px; font-size: 12px;">
                         Select All
