--- a/public/index.html
+++ b/public/index.html
@@ -542,6 +542,126 @@
                             </div>
                         </div>
                     </div>
+
+                    <div id="edge-search-dialog" class="dialog hidden">
+                        <div class="dialog-content" style="max-width: 500px;">
+                            <h3>Create Edge</h3>
+                            <p style="font-size: 12px; color: #666; margin-bottom: 16px;">
+                                Connect distant nodes via search
+                            </p>
+                            
+                            <!-- Source Node Search -->
+                            <div style="margin-bottom: 16px;">
+                                <label style="display: block; font-size: 13px; font-weight: 600; margin-bottom: 6px;">
+                                    Source Node:
+                                </label>
+                                <input
+                                    type="text"
+                                    id="edge-source-search"
+                                    placeholder="Search for source node..."
+                                    style="
+                                        width: 100%;
+                                        padding: 8px;
+                                        border: 1px solid #ddd;
+                                        border-radius: 4px;
+                                        font-size: 13px;
+                                    "
+                                />
+                                <div
+                                    id="edge-source-results"
+                                    class="edge-search-dropdown hidden"
+                                    style="
+                                        max-height: 200px;
+                                        overflow-y: auto;
+                                        border: 1px solid #ddd;
+                                        border-radius: 4px;
+                                        margin-top: 4px;
+                                        background: white;
+                                        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+                                    "
+                                ></div>
+                                <div id="edge-source-selected" style="font-size: 12px; color: #666; margin-top: 4px; min-height: 16px;"></div>
+                            </div>
+
+                            <!-- Target Node Search -->
+                            <div style="margin-bottom: 16px;">
+                                <label style="display: block; font-size: 13px; font-weight: 600; margin-bottom: 6px;">
+                                    Target Node:
+                                </label>
+                                <input
+                                    type="text"
+                                    id="edge-target-search"
+                                    placeholder="Search for target node..."
+                                    style="
+                                        width: 100%;
+                                        padding: 8px;
+                                        border: 1px solid #ddd;
+                                        border-radius: 4px;
+                                        font-size: 13px;
+                                    "
+                                />
+                                <div
+                                    id="edge-target-results"
+                                    class="edge-search-dropdown hidden"
+                                    style="
+                                        max-height: 200px;
+                                        overflow-y: auto;
+                                        border: 1px solid #ddd;
+                                        border-radius: 4px;
+                                        margin-top: 4px;
+                                        background: white;
+                                        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+                                    "
+                                ></div>
+                                <div id="edge-target-selected" style="font-size: 12px; color: #666; margin-top: 4px; min-height: 16px;"></div>
+                            </div>
+
+                            <!-- Weight Input -->
+                            <div style="margin-bottom: 16px;">
+                                <label style="display: block; font-size: 13px; font-weight: 600; margin-bottom: 6px;">
+                                    Weight:
+                                </label>
+                                <input
+                                    type="number"
+                                    id="edge-weight-input"
+                                    value="1"
+                                    min="0.01"
+                                    step="0.01"
+                                    style="
+                                        width: 100%;
+                                        padding: 8px;
+                                        border: 1px solid #ddd;
+                                        border-radius: 4px;
+                                        font-size: 13px;
+                                    "
+                                />
+                            </div>
+
+                            <!-- Category Input -->
+                            <div style="margin-bottom: 16px;">
+                                <label style="display: block; font-size: 13px; font-weight: 600; margin-bottom: 6px;">
+                                    Category (optional):
+                                </label>
+                                <input
+                                    type="text"
+                                    id="edge-category-input"
+                                    placeholder="Enter category..."
+                                    style="
+                                        width: 100%;
+                                        padding: 8px;
+                                        border: 1px solid #ddd;
+                                        border-radius: 4px;
+                                        font-size: 13px;
+                                    "
+                                />
+                            </div>
+
+                            <div class="dialog-buttons">
+                                <button id="edge-search-ok">Create Edge</button>
+                                <button id="edge-search-cancel">Cancel</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="sidebar" id="local-graph-sidebar">
@@ -612,6 +732,24 @@
                                     Show Edge Arrows
                                 </label>
                             </div>
+                        </div>
+                    </div>
+
+                    <div class="sidebar-section">
+                        <h4>Create Edge</h4>
+                        <div style="margin-bottom: 8px;">
+                            <p style="font-size: 12px; color: #666; margin-bottom: 8px;">
+                                Connect distant nodes via search
+                            </p>
+                            <button
+                                id="create-edge-search-btn"
+                                class="tool-btn"
+                                style="width: 100%; padding: 8px; font-size: 12px;"
+                                title="Create Edge via Search"
+                            >
+                                <span class="icon">🔗</span>
+                                Create Edge
+                            </button>
                         </div>
                     </div>
 
