--- a/public/index.html
+++ b/public/index.html
@@ -662,6 +662,92 @@
                             </div>
                         </div>
                     </div>
+
+                    <div id="merge-dialog" class="dialog hidden">
+                        <div class="dialog-content" style="max-width: 500px;">
+                            <h3>Merge Database</h3>
+                            <p style="font-size: 12px; color: #666; margin-bottom: 16px;">
+                                Select a source database to merge into the current database. Choose how to handle conflicts.
+                            </p>
+                            
+                            <!-- Database Selection -->
+                            <div style="margin-bottom: 16px;">
+                                <label style="display: block; font-size: 13px; font-weight: 600; margin-bottom: 6px;">
+                                    Source Database:
+                                </label>
+                                <div
+                                    id="merge-database-list"
+                                    style="
+                                        max-height: 200px;
+                                        overflow-y: auto;
+                                        border: 1px solid #ddd;
+                                        border-radius: 4px;
+                                        padding: 8px;
+                                        background: #f9f9f9;
+                                    "
+                                >
+                                    <p style="text-align: center; color: #999; font-size: 12px;">Loading databases...</p>
+                                </div>
+                            </div>
+
+                            <!-- Conflict Resolution -->
+                            <div style="margin-bottom: 16px;">
+                                <label style="display: block; font-size: 13px; font-weight: 600; margin-bottom: 8px;">
+                                    Conflict Resolution:
+                                </label>
+                                <div style="display: flex; flex-direction: column; gap: 8px;">
+                                    <label style="font-size: 12px; display: flex; align-items: center; cursor: pointer;">
+                                        <input
+                                            type="radio"
+                                            name="merge-conflict-resolution"
+                                            value="skip"
+                                            checked
+                                            style="margin-right: 8px"
+                                        />
+                                        <div>
+                                            <strong>Skip Conflicts</strong> (default)
+                                            <div style="font-size: 11px; color: #666; margin-top: 2px;">
+                                                Keep existing data, ignore conflicting items
+                                            </div>
+                                        </div>
+                                    </label>
+                                    <label style="font-size: 12px; display: flex; align-items: center; cursor: pointer;">
+                                        <input
+                                            type="radio"
+                                            name="merge-conflict-resolution"
+                                            value="replace"
+                                            style="margin-right: 8px"
+                                        />
+                                        <div>
+                                            <strong>Replace Conflicts</strong>
+                                            <div style="font-size: 11px; color: #666; margin-top: 2px;">
+                                                Overwrite existing data with imported data
+                                            </div>
+                                        </div>
+                                    </label>
+                                    <label style="font-size: 12px; display: flex; align-items: center; cursor: pointer;">
+                                        <input
+                                            type="radio"
+                                            name="merge-conflict-resolution"
+                                            value="rename"
+                                            style="margin-right: 8px"
+                                        />
+                                        <div>
+                                            <strong>Rename Conflicts</strong>
+                                            <div style="font-size: 11px; color: #666; margin-top: 2px;">
+                                                Create new items with new IDs for conflicting data
+                                            </div>
+                                        </div>
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div class="dialog-buttons">
+                                <button id="merge-ok">Merge</button>
+                                <button id="merge-cancel">Cancel</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="sidebar" id="local-graph-sidebar">
@@ -749,6 +835,24 @@
                             >
                                 <span class="icon">🔗</span>
                                 Create Edge
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="sidebar-section">
+                        <h4>Database Operations</h4>
+                        <div style="margin-bottom: 8px;">
+                            <p style="font-size: 12px; color: #666; margin-bottom: 8px;">
+                                Merge data from another database
+                            </p>
+                            <button
+                                id="merge-db-btn"
+                                class="tool-btn"
+                                style="width: 100%; padding: 8px; font-size: 12px;"
+                                title="Merge Database"
+                            >
+                                <span class="icon">🔗</span>
+                                Merge Database
                             </button>
                         </div>
                     </div>
