feat: add vim-like hotkey manager with multi-character sequences
Add hotkey mode with vim-like command sequences:

- Multi-character commands: cn, dn, en, ce, de, ee, ces

- Single-character modes: n, e, s

- Navigation: f, l, w, c

- Count prefixes: 3n, 2dn, etc.

- Visual sequence display and help overlay

- 2-second timeout like vim's timeoutlen

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,14 @@
                         <span class="icon">👆</span>
                         <span>Select</span>
                     </button>
+                    <button
+                        id="hotkey-mode-btn"
+                        class="tool-btn"
+                        title="Hotkey Mode (Vim-like)"
+                    >
+                        <span class="icon">⌨️</span>
+                        <span>Hotkey</span>
+                    </button>
                 </div>
 
                 <div class="toolbar-section">
