feat: separate view state saving and add filter state change tracking
- Add manual view state save button in sidebar
- Remove automatic view state tracking from pan/zoom
- Add filter state change tracking to Save/Discard flow
- Fix node selection triggering change tracking incorrectly
- Move Save/Discard buttons to appear between search and node-mode
- Toolbar buttons now focus on nodes, edges, and filterState only

--- a/public/index.html
+++ b/public/index.html
@@ -830,6 +830,24 @@
                     </div>
 
                     <div class="sidebar-section">
+                        <h4>View State</h4>
+                        <div style="margin-bottom: 8px;">
+                            <p style="font-size: 12px; color: #666; margin-bottom: 8px;">
+                                Save current zoom and pan position
+                            </p>
+                            <button
+                                id="save-view-state-btn"
+                                class="tool-btn"
+                                style="width: 100%; padding: 8px; font-size: 12px;"
+                                title="Save View State"
+                            >
+                                <span class="icon">💾</span>
+                                Save View
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="sidebar-section">
                         <h4>Create Edge</h4>
                         <div style="margin-bottom: 8px;">
                             <p style="font-size: 12px; color: #666; margin-bottom: 8px;">
