feat: add new graph template button in sidebar
- Add template functionality to start fresh with 1 centered node and scale 2
- Safer alternative to Clear button - creates starting point instead of empty canvas
- Template button located in sidebar under new 'Templates' section
- Includes unsaved changes warning before creating template
- Automatically saves template node and view state to database

--- a/public/index.html
+++ b/public/index.html
@@ -926,6 +926,24 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="sidebar-section">
+                        <h4>Templates</h4>
+                        <div style="margin-bottom: 8px;">
+                            <p style="font-size: 12px; color: #666; margin-bottom: 8px;">
+                                Start fresh with a template
+                            </p>
+                            <button
+                                id="new-template-btn"
+                                class="tool-btn"
+                                style="width: 100%; padding: 8px; font-size: 12px;"
+                                title="New Graph Template"
+                            >
+                                <span class="icon">📄</span>
+                                New Graph Template
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
