feat: add settings dialog with fonts tab and LXGW Bright font integration
- Add comprehensive settings dialog accessible from sidebar
- Add fonts tab with UI font, canvas font (English/Chinese), and font size controls
- Add font settings persistence via localStorage
- Integrate LXGW Bright font (bilingual English/Chinese font)
- Add live font previews in settings dialog
- Add reset to defaults functionality
- Update font constants to support dynamic font changes

Closes font customization feature request

--- a/public/index.html
+++ b/public/index.html
@@ -1589,6 +1589,7 @@
                             "
                         >
                             <option value="-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif">System Default</option>
+                            <option value="'LXGW Bright', Arial, sans-serif">LXGW Bright</option>
                             <option value="Arial, sans-serif">Arial</option>
                             <option value="'Helvetica Neue', Helvetica, Arial, sans-serif">Helvetica Neue</option>
                             <option value="'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Segoe UI</option>
@@ -1601,7 +1602,7 @@
                             <option value="'Courier New', Courier, monospace">Courier New</option>
                         </select>
                         <div style="padding: 8px; background: #f8f9fa; border-radius: 4px; font-size: 12px; color: #666;">
-                            Preview: <span id="ui-font-preview" style="font-weight: 500;">The quick brown fox jumps over the lazy dog</span>
+                            Preview: <span id="ui-font-preview" style="font-weight: 500;">The quick brown fox jumps over the lazy dog 快速棕色狐狸</span>
                         </div>
                     </div>
 
@@ -1624,6 +1625,7 @@
                             "
                         >
                             <option value="Arial">Arial</option>
+                            <option value="'LXGW Bright', Arial, sans-serif">LXGW Bright</option>
                             <option value="'Helvetica Neue', Helvetica, Arial, sans-serif">Helvetica Neue</option>
                             <option value="'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Segoe UI</option>
                             <option value="'Roboto', sans-serif">Roboto</option>
@@ -1637,7 +1639,7 @@
                             <option value="'Courier New', Courier, monospace">Courier New</option>
                         </select>
                         <div style="padding: 8px; background: #f8f9fa; border-radius: 4px; font-size: 12px; color: #666;">
-                            Preview: <span id="canvas-font-preview" style="font-weight: 500;">Node Label</span>
+                            Preview: <span id="canvas-font-preview" style="font-weight: 500;">Node Label 节点标签</span>
                         </div>
                     </div>
 
@@ -1660,6 +1662,7 @@
                             "
                         >
                             <option value="Arial">Arial (Default)</option>
+                            <option value="'LXGW Bright', Arial, sans-serif">LXGW Bright</option>
                             <option value="'Microsoft YaHei', '微软雅黑', Arial, sans-serif">Microsoft YaHei</option>
                             <option value="'SimHei', '黑体', Arial, sans-serif">SimHei (黑体)</option>
                             <option value="'SimSun', '宋体', Arial, serif">SimSun (宋体)</option>
@@ -1671,7 +1674,7 @@
                             <option value="'Source Han Sans SC', Arial, sans-serif">Source Han Sans SC</option>
                         </select>
                         <div style="padding: 8px; background: #f8f9fa; border-radius: 4px; font-size: 12px; color: #666;">
-                            Preview: <span id="canvas-chinese-font-preview" style="font-weight: 500;">中文标签</span>
+                            Preview: <span id="canvas-chinese-font-preview" style="font-weight: 500;">中文标签 快速棕色狐狸跳过懒狗</span>
                         </div>
                     </div>
 
